samples/_failures_safe/1761493653_5ebc44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94782fb8.c: In function ‘main’:
./samples/SAFE/__tmp_94782fb8.c:164:9: error: expected expression at end of input
  164 |         "DFS Traversal",
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_94782fb8.c:164:9: error: expected declaration or statement at end of input
